--- a/src/view/root-form.fxml
+++ b/src/view/root-form.fxml
@@ -6,9 +6,9 @@
 
 <AnchorPane prefHeight="628.0" prefWidth="649.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RootController">
     <children>
-        <AnchorPane fx:id="anpRoot" layoutY="-6.0" prefHeight="628.0" prefWidth="649.0">
+        <AnchorPane fx:id="anpRoot" layoutY="-6.0" prefHeight="724.0" prefWidth="726.0">
             <children>
-                <AnchorPane layoutX="36.0" layoutY="48.0" prefHeight="199.0" prefWidth="166.0" style="-fx-background-color: #82ccdd; -fx-background-radius: 15;">
+                <AnchorPane layoutX="49.0" layoutY="211.0" prefHeight="199.0" prefWidth="166.0" style="-fx-background-color: #82ccdd; -fx-background-radius: 15;">
                     <children>
                         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="22.0" prefHeight="43.0" prefWidth="135.0" style="-fx-background-color: #079992;" text="Customers" textAlignment="CENTER" textFill="#ece4e4">
                             <font>
@@ -22,7 +22,7 @@
                         </Label>
                     </children>
                 </AnchorPane>
-                <AnchorPane layoutX="240.0" layoutY="45.0" prefHeight="199.0" prefWidth="166.0" style="-fx-background-color: #82ccdd; -fx-background-radius: 15;">
+                <AnchorPane layoutX="270.0" layoutY="208.0" prefHeight="199.0" prefWidth="166.0" style="-fx-background-color: #82ccdd; -fx-background-radius: 15;">
                     <children>
                         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="29.0" prefHeight="43.0" prefWidth="135.0" style="-fx-background-color: #079992;" text="Orders" textAlignment="CENTER" textFill="#ece4e4">
                             <font>
@@ -36,7 +36,7 @@
                         </Label>
                     </children>
                 </AnchorPane>
-                <AnchorPane layoutX="449.0" layoutY="44.0" prefHeight="199.0" prefWidth="166.0" style="-fx-background-color: #82ccdd; -fx-background-radius: 15;">
+                <AnchorPane layoutX="488.0" layoutY="210.0" prefHeight="199.0" prefWidth="166.0" style="-fx-background-color: #82ccdd; -fx-background-radius: 15;">
                     <children>
                         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="20.0" layoutY="25.0" prefHeight="43.0" prefWidth="135.0" style="-fx-background-color: #079992;" text="Items" textAlignment="CENTER" textFill="#ece4e4">
                             <font>
@@ -50,6 +50,11 @@
                         </Label>
                     </children>
                 </AnchorPane>
+            <Label prefHeight="98.0" prefWidth="726.0" style="-fx-background-color: #40739e;" text="|DASHBOARD">
+               <font>
+                  <Font name="Bodoni MT Bold" size="50.0" />
+               </font>
+            </Label>
             </children>
         </AnchorPane>
     </children>
